feat: added haproxy configuration

--- a/www/index.j2
+++ b/www/index.j2
@@ -7,6 +7,6 @@
     <title>Hello world</title>
   </head>
   <body>
-    <h1>Deployed using ansible on host</h1>
+    <h1>Deployed using ansible on host {{ ansible_hostname }} {{ ansible_host }}</h1>
   </body>
 </html>
